--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 This is a script was coded in HTML, it is made
 to see if there is any patches on PS4 and PS5 firmwares,
-so far for PS4 it works from 8.00 to 8.52, i'll Tweet updates 
-on Twitter @iDexirous
+so far for PS4 it works from 8.00 to 8.52 and PS5 21.02-04.00.00.42-0.00.00.00 
+I'll Tweet updates on Twitter @iDexirous, reply if it works for you!
